# bitmapist

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.markdown  README.md  docker-compose.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
bitmapist/: __init__.py  django_client.py
bitmapist/cohort/: __init__.py
bitmapist/cohort/tmpl/: form_data.mako  table_data.mako  table_data_csv.mako
static/: bitmapist_logo.sketch
test/: conftest.py  test_activity_trackist.py  test_bitmapist.py  test_cohort.py  test_delta_methods.py  test_equality.py  test_from_date.py  test_period_start_end.py  test_unique_events.py
