[tool.poetry]
name = "bitmapist"
version = "3.111"
description="Implements a powerful analytics library using Redis bitmaps."
authors = [
    "Amir Salihefendic <dev@doist.com>",
    "Doist Developers <dev@doist.com>",
]
license="BSD"
readme = "README.md"
repository = "https://github.com/Doist/bitmapist"
keywords=[ "redis", "bitmap", "analytics", "bitmaps", "realtime", "cohort", ]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages=[ { include = "bitmapist" } ]
exclude = ['tests/']
include = [
    'AUTHORS',
    'README.md',
    'static/bitmapist.png',
    'static/bitmapist.svg',
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
redis = ">=2.10,<5.0"
python-dateutil = "*"
future = ">=0.14.3,<0.19.0"
Mako= "^1.0.4"

[tool.poetry.dev-dependencies]
pytest-runner = "^6.0.0"
pytest = "^7.3.1"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
